stylesheets/custom.scss
@mixin calc($property, $expression) { 
  #{$property}: -moz-calc(#{$expression});
  #{$property}: -webkit-calc(#{$expression}); 
  #{$property}: -o-calc(#{$expression}); 
  #{$property}: calc(#{$expression}); 
}

@mixin transition($property, $speed, $effect) {
  transition: #{$property} #{$speed} #{$effect};
  -moz-transition: #{$property} #{$speed} #{$effect};
  -webkit-transition: #{$property} #{$speed} #{$effect};
  -o-transition: #{$property} #{$speed} #{$effect};
}

/* General */
html {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  height: 100%;

  body {
    @extend html;
    min-height: 100%;
  }
}

button {
  border: 0;
  outline: 0;
  font-weight: lighter;
  font-family: sans-serif;
}

.my-username {
  color: #2980b9 !important;
}

.nifty-box {
  font-weight: lighter;
  font-family: sans-serif;
  font-size: 16px;
  padding: 15px;
  margin: 10px 10px 0 0;
  background: rgba(32, 32, 32, 0.8);
  color: white;
  box-shadow: 0 1px 5px rgba(0,0,0,0.4);
}

/* Flash */
#main-flash {
  display: none;
  position: absolute;
  text-align: center;
  width: 300px;
  top: 20%;
  @include calc(right, "50% - 150px");
  z-index: 10000;

  #flash-content-wrapper {
    padding: 10px;
    font-size: 18px;
  }
}

/* Map */
#map {
  height: 60%;
  box-shadow: 0 1px 5px rgba(0,0,0,0.4);
}

/* Chatbox */
#chatbox {
  height: 30%;
  @include calc(height, "40% - 70px");
  margin: 0 10px 0 10px;

  #chatbox-wrapper {
    height: 100%;

    #chatbox-button-wrapper {
      position: absolute;
      right: 20px;
    }

    .chatbox-scroll-fader {
      position: absolute;
      content: '';
      height: 5px;
      width: calc(100% - 160px);

      &.top {
        background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%);
      }

      &.bottom {
        margin-top: -4px;
        background: linear-gradient(to top, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%);
      }
    }

    #ul-wrapper {
      overflow: auto;
      margin-top: 10px;
      height: 100%;
      width: 100%;

      ul {
        list-style-type: none;
        margin-top: 0;
        padding-left: 0;
        display: none;

        &.active {
          display: block;
        }

        li {
          font-family: sans-serif;
          font-weight: lighter;
          font-size: 16px;

          .username {
            font-weight: bold;
            color: #c0392b;
          }

          .timestamp {
            display: none;
            float: right;
            padding-right: 150px;
            @media (max-width: 700px) { display: none; }
          }

          &:hover {
            .timestamp {
              display: block;
            }
          }
        }
      }
    }
  }

  .chatroom-button {
    position: relative;
    padding: 7px;
    float: right;
    background: rgba(32, 32, 32, 0.3);
    margin: 10px 0 0 10px;
    cursor: pointer;

    &.blue {
      background: rgba(0, 95, 255, 0.4);
      box-shadow: 0 1px 5px rgba(0, 150, 255, 0.4);
    }

    .notification-badge {
      display: none;
      padding: 1px 3px;
      position: absolute;
      top: -7px;
      left: -7px;
      font-size: 12px;
      font-weight: bold;
      background: #19B5FE;
      border-radius: 1px;
      box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.2);
    }

    .close-button {
      opacity: 0;
      pointer-events: none;
      position: absolute;
      top: -7px;
      right: -6px;
      color: rgba(32,32,32,0.7);
      cursor: pointer;
      @include transition(opacity,".11s","ease-in-out");

      &:hover {
        opacity: 0.7;
        pointer-events: auto;
        color: rgba(32,32,32,0.9);
      }
    }
  }

  .chatroom-button:not(.blue):hover {
    .close-button {
      opacity: 0.7;
      pointer-events: auto;
      &:hover {
        color: rgba(32,32,32,0.9);
      }
    }
  }
}

/* Popup */
.popup-header {
  position: fixed;
  top: 0px;
  padding: 0px 0px 3px 0px;
  color: #c0392b;
  font-weight: bold;
  font-size: 16px;
}

.leaflet-popup-content {
  .icon-comment {
    position: absolute;
    top: 0;
    right: 0;
    padding: 2px 3px 0 0;
    color: #c3c3c3;
  }
}

/* Legend box */
#legend-box {
  #chatroom, #user-count {
    position: absolute;
    right: 0;
    z-index: 1000;
  }

  #user-count {
    top: 58px;
  }
}

/* Sign-in modal */
#page-modal {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background: black;
  z-index: 9999;
}

.modal-text {
  position: absolute;
  font-family: sans-serif;
  font-weight: lighter;
  font-size: 40px;
  color: white;
  top: 40%;
  width: 100%;
  text-align: center;

  #name-input {
    display: block;
    outline: 0;
    background: transparent;
    border: 0;
    border-bottom: 3px solid white;
    margin: auto;
    font-size: 25px;
    font-family: sans-serif;
    font-weight: lighter;
    color: white;
    text-align: center;
    padding: 10px;
  }

  input[type=submit] {
    display: none;
  }
}


/* Chat form */
form#chat-form {
  z-index: 1000;
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  margin: 10px;

  #chat-input {
    width: 90%;
    @include calc(width, "100% - 130px");
    padding: 10px;
    font-size: 18px;
    outline: 0;
  }

  #send-chat-message {
    padding: 13px;
    position: absolute;
    right: 19px;
    margin: 2px 0 1px 0;
  }
}

/* Misc styling elements */
.downward-select-triangle {
  position: absolute;
  @include calc(right, "50% - 6px");
  bottom: 2px;
  width: 0;
  height: 0;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  border-top: 6px solid #ecf0f1;
}

